src/objects/Asset_Address__c.object
<CustomObject>
    <description>Object to tie multiple Assets to a single postal Address record while allowing Addresses and their related Assets to be broken down into more granular locations such as Building, Floor or Suite that are part of a single postal Address.</description>
    <fields>
        <fullName>Address_Name__c</fullName>
        <formula>Address__r.Address_Name__c</formula>
        <label>Address Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Asset Addresses</relationshipLabel>
        <relationshipName>Asset_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Address</relationshipLabel>
        <relationshipName>Asset_Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Identifier__c</fullName>
        <description>Building where this Asset is located.</description>
        <inlineHelpText>Building where this Asset is located.</inlineHelpText>
        <label>Building Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ETL External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Floor where this Asset is located.</description>
        <inlineHelpText>Floor where this Asset is located.</inlineHelpText>
        <label>Floor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Address__c</fullName>
        <formula>Address__r.Address_Line_1__c &amp; BR() &amp; 
Address__r.Address_Line_2__c &amp; BR() &amp; 
Address__r.City__c &amp; &quot;, &quot; &amp; Text(Address__r.State_Province__c) &amp; &quot; &quot; &amp; Address__r.Postal_Code__c &amp; BR() &amp; 
Text(Address__r.Country__c)</formula>
        <label>Linked Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <description>Suite where this Asset is located.</description>
        <inlineHelpText>Suite where this Asset is located.</inlineHelpText>
        <label>Suite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Asset Address</label>
    <nameField>
        <displayFormat>EA-{000000000}</displayFormat>
        <label>Asset Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>